@@ -419,8 +419,6 @@ extern void get_frame_saved_regs (struct frame_info *,
 extern struct block *get_frame_block (struct frame_info *,
                                       CORE_ADDR *addr_in_block);
 
-extern struct block *get_current_block (CORE_ADDR *addr_in_block);
-
 extern struct block *get_selected_block (CORE_ADDR *addr_in_block);
 
 extern struct symbol *get_frame_function (struct frame_info *);
