@@ -1,3 +1,9 @@
+2002-11-28  Andrew Cagney  <cagney@redhat.com>
+
+	* stack.c (get_selected_block): In-line get_current_block.
+	* frame.h (get_current_block): Delete declaration.
+	* blockframe.c (get_current_block): Delete function.
+
 2002-11-28  Andrew Cagney  <ac131313@redhat.com>
 
 	* gdbarch.sh (DEPRECATED_USE_GENERIC_DUMMY_FRAMES): Rename
